# torrent-companion

./: Dockerfile  LICENSE  README.md  pyproject.toml
test/indexer_tests/: piratebay_test.py
test/piratebay_test/: piratebay_test.py
torrent_companion/: enums.py
torrent_companion/analysis/: base_analyzer.py
torrent_companion/database/: __init__.py  handler.py
torrent_companion/indexers/: base_indexer.py  base_scrapper.py  common_models.py  common_types.py  enums.py
torrent_companion/indexers/definitions/piratebay/: indexer.py  models.py  scrapper.py  types.py
torrent_companion/scrappers/: base_scrapper.py  enums.py  models.py
torrent_companion/scrappers/definitions/piratebay/: __init__.py  models.py
