[project]
name = "torrent-companion"
version = "1.0"
description = "Default template for PDM package"
authors = [
    {name = "artumont", email = "197291181+artumont@users.noreply.github.com"},
]
dependencies = ["schedule>=1.2.2", "fastapi>=0.116.1", "httpx>=0.28.1", "pytest>=8.4.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
